atlassian/atlassian-dc/jira/jira-node1.yaml
apiVersion: v1                           # Jira Deployment Node 1
kind: Pod
metadata:
  labels:
    app: jira
  name: jira-node1
spec:
  containers:
    - name: jira-node1
      image: "agiletrailblazers/jira-software:8.8.0"
      ports:
        - containerPort: 8080
        - containerPort: 40001
      resources:
        limits:
          cpu: "4"
          memory: "16G"
        requests:
          cpu: "2"
          memory: "8G"
      volumeMounts:
        - name: "jira-home"
          mountPath: /var/atlassian/application-data/jira
        - name: "jira-shared-home"
          mountPath: /var/atlassian/application-data/jira/shared
  volumes:
    - name: jira-home
      persistentVolumeClaim:
        claimName: jira-home-node1-pv-claim
    - name: jira-shared-home
      persistentVolumeClaim:
        claimName: jira-shared-home-pv-claim
