atlassian/atlassian-dc/jira/jira-postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: jira-postgres-pv-claim
