atlassian/atlassian-dc/jira/jira-service.yaml
apiVersion: v1                                       #Jira Service
kind: Service
metadata:
  name: jira-service
  labels:
    app: jira-service
spec:
  type: NodePort
  ports:
   - port: 8080
  selector:
   app: jira
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
---
apiVersion: v1                #PostgreSQL Service
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
