atlassian/atlassian-dc/jira/jira.yaml
apiVersion: v1                           # Jira Deployment Node 1
kind: Pod
metadata:
  labels:
    app: jira
  name: jira-node1
spec:
  containers:
    - name: jira-node1
      image: "agiletrailblazers/jira-software:8.8.0"
      ports:
        - containerPort: 8080
        - containerPort: 40001
      resources:
        limits:
          cpu: "2"
          memory: "6G"
        requests:
          cpu: "1"
          memory: "4G"
      volumeMounts:
        - name: "jira-home"
          mountPath: /var/atlassian/application-data/jira
        - name: "jira-shared-home"
          mountPath: /var/atlassian/application-data/jira/shared
  volumes:
    - name: jira-home
      persistentVolumeClaim:
        claimName: jira-home-node1-pv-claim
    - name: jira-shared-home
      persistentVolumeClaim:
        claimName: jira-shared-home-pv-claim
---
apiVersion: v1                           # Jira Deployment Node 2
kind: Pod
metadata:
  labels:
    app: jira
  name: jira-node2
spec:
  containers:
    - name: jira-node2
      image: "agiletrailblazers/jira-software:8.8.0"
      ports:
        - containerPort: 8080
        - containerPort: 40001
      resources:
        limits:
          cpu: "2"
          memory: "6G"
        requests:
          cpu: "1"
          memory: "4G"
      volumeMounts:
        - name: "jira-home"
          mountPath: /var/atlassian/application-data/jira
        - name: "jira-shared-home"
          mountPath: /var/atlassian/application-data/jira/shared
  volumes:
    - name: jira-home
      persistentVolumeClaim:
        claimName: jira-home-node2-pv-claim
    - name: jira-shared-home
      persistentVolumeClaim:
        claimName: jira-shared-home-pv-claim
---
apiVersion: v1                                       #Jira Service
kind: Service
metadata:
  name: jira-service
  labels:
    app: jira-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jira
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: LoadBalancer
