atlassian/atlassian-dc/jira/jira-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "jira-session"
    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
spec:
  tls:
    - hosts:
      - jira-test.agiletrailblazers.com
      secretName: atb-certs
  rules:
  - host: jira-test.agiletrailblazers.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jira-service
          servicePort: 8080
